turmites.lessons.turmites.helloturmite.HelloTurmite.scala.error
Turmite:8: error: not found: value IndiceCouleur
    while (colors(IndiceCouleur)!=getCouleurSol()) {
                  ^Turmite:9: error: not found: value IndiceCouleur
        IndiceCouleur+=1;
        ^